# Robot-Controller

./: .gitignore  CMakeLists.txt  Pickle2  README.md  comms_test.py  constants.py  controller_main.py  controller_test.py  cubic-spline-plot.py  cv_cameraCalibration.py  cv_fiducial.py  cv_main.py  mainHelper.py  mainProgram.py  noPathPickle  plannerTests.py  pybindTest.py  ruh.sh  test.py  websocket_test.py  workingPathPickle
Visualizer/: viz.py
computerVisionFragments/: controllerTest.py  cv_cameraCalibration.py  neopixelToRGB.py
controllerFragments/: comms_test.py  cubic-spline-plot.py
include/: constants.hh  motion_planner.hh  node.hh  planner.hh  task_planner.hh
kumpooterBision/: KumpooterBision.py
src/: main.cc  motion_planner.cc  node.cc  planner.cc  task_planner.cc
